completed writeup including project ideas

--- a/hw1/cs208hw1.tex
+++ b/hw1/cs208hw1.tex
@@ -28,7 +28,7 @@
 	Spring 2019 - Harvard University\\
 \end{center}
 
-The public Github repo containing all of the work is at https://github.com/TurboFreeze/cs208hw. All code has also been included in the appendix of this PDF as specified.
+The public Github repo containing all work is at https://github.com/TurboFreeze/cs208hw. All code has also been included in the appendix of this PDF as specified.\\
 
 {\large\textbf{Problem 1}}
 
@@ -69,7 +69,7 @@ where $x$ is to take on all possible values for that variable.
 
 Percentage estimates where given above to provide intuition and also as a sanity check, but the actual values calculated will be the ones used from here on.
 
-When taking these three variables together, the probability of the collision is the intersection of all three variables colliding, which is the product of the three probabilities. This gives an overall probability of colliding to be $0.01555964 \times 0.01831928 \times 0.1416453 \approx \textbf{0.00004} = p_{collision}$.
+When taking these three variables together, the probability of the collision is the intersection of all three variables colliding, which is the product of the three probabilities. This gives an overall probability of colliding to be $0.01555964 \times 0.01831928 \times 0.1416453 \approx {0.00004} = p_{collision}$.
 
 Now, the geographic identifier of PUMA regions needs to be taken into account. Here is a summary of counts for each PUMA region.
 \begin{center}
@@ -104,26 +104,45 @@ The code for this problem can be found in \texttt{q2reconstruction.R}. In this p
 \begin{center}
 \includegraphics[width=\textwidth]{figs/attackrounding}
 \end{center}
-With the above attack against the rounding defense, the first failure occurs with $R = 15$ and the last success occurs at $R = 25$. The reconstruction fraction declines rapidly before oscillating substantially just below the success threshold.
+With the above attack against the rounding defense, after $R = 12$ success oscillates substantially before declining, suggesting this is roughly the rounding parameter threshold for success.
 
 \begin{center}
 \includegraphics[width=\textwidth]{figs/attacknoise}
 \end{center}
-With the above attack against the noise injection defense, the results drop precipitously and clearly cross from success to failure with all $\sigma > 3$ producing high enough noise to result in failure.
+With the above attack against the noise injection defense, the results drop precipitously and approach failure with $\sigma \geq 14$ producing high enough noise to result in failure.
 
 \begin{center}
 \includegraphics[width=\textwidth]{figs/attacksubsampling}
 \end{center}
-For the subsampling defense, larger subsamples result in worse privacy, with anything above subsamples of size 64 providing sufficient protection against successful reconstruction.
+For the subsampling defense, larger subsamples result in worse privacy, with anything above subsamples of size around 13 generally providing sufficient protection against successful reconstruction.
 \pagebreak
 
 {\large\textbf{Problem 3}}
+
+The code for this problem can be found in \texttt{q3membership.R}. Plots of success fraction against number of queries executed have been included below for each of the three defense mechanisms, respectively. Note that the number of queries was limited to 300 for each as it provides a sufficiently clear illustration of convergence behavior, as well as for computational feasibility. The parameters for each defense were determined by the previous problem, corresponding to the reconstruction failure threshold. However, it can been that (with sufficiently large numbers of queries/attributes), membership attacks can still be performed with substantially high true positive probabilities.
+\begin{center}
+	\includegraphics[width=0.9\textwidth]{figs/membershiprounding}
+	\includegraphics[width=0.9\textwidth]{figs/membershipnoisy}
+	\includegraphics[width=0.9\textwidth]{figs/membershipsubsampling}
+\end{center}
 
 \pagebreak
 
 {\large\textbf{Problem 4}}
 
+Some tentative project topic ideas are listed and described as follow, roughly from most interest to least. Some of these are just starting points that require substantial research and reading to be a full project. The goal is to work on a theoretical project that can hopefully be parlayed down the road into a senior thesis or substantial research topic with potentially publishable results. However, some experimental projects like the case study may provide just as valuable insights and practice while being more feasible for the scope of this class.
+\begin{itemize}
+	\item \ul{Cyberprivacy}: Differential privacy foundations often focus on large datasets of personal information (i.e. census data), the ideal setting for evaluating and demonstrating privacy protection techniques. In practice, many pressing privacy concerns arise from the collection process and this proposed project idea focuses on this. This domain-specific application will partially be experimental, largely working with local differential privacy in the realm of cybersecurity. In the process, current implementations such as Apple's iOS differentially private collection mechanisms will likely be studied and discussed, with extensions to higher-profile situations such as social media and network traffic.
+	\item \ul{Distributed DP}: Many computational tasks and algorithms involve distributed computing. A decentralized differential privacy paradigm has already emerged with local DP. The privacy-utility tradeoff will be examined through this lense of centralized vs local DP. Distributed computing frameworks such as MapReduce and Spark will be evaluated for privacy, with considerations of how current local DP and DP algorithms in general can be extended to these distributed tasks.
+	\item \ul{High-dimensional DP}: High-dimensional problems are always a challenge for differential privacy given the inherently rich information that high-dimensional models often learn from the data. The challenge of creating private yet useful machine learning algorithms and, in particular, neural networks models will be studied, starting from reading the existing literature in the area before moving to experiments and possibly proposing new differentially private techniques in this area.
+	\item \ul{Case Study}: An experimental project involving a large, rich real-world dataset with the goal of evaluating privacy-utility tradeoff in this specific case. Various inference techniques and algorithms will be applied in the traditional manner assuming unfettered access to data, and again in a differentially private manner. One objective will be to determine a methodology towards selecting DP mechanisms and algorithms as to maximize utility with a given budget. Utility will also be compared against the non-differentially private results to understand the tradeoff being made in the name of privacy. Finally, attention will be drawn to privacy protection with attacks on the dataset using unprotected queries versus DP queries.
+	\item \ul{Theory and Exposition}: Given the somewhat limited experience in DP so far, yet the strong interest in in-depth theoretical projects, one possibility is the reading of relevant literature for a specific area of DP research and presenting an exposition of them. Some specific areas of interest include cryptography and developing new differentially-private algorithms, such as for time series models.
+\end{itemize}
 
+
+
+
+\pagebreak
 
 {\large\textbf{Appendix}}
 
@@ -255,9 +274,9 @@ sensitive.data <- sample.data[, sensitive.var]
 ##### Querying Mechanisms (including defenses)
 
 # standard query of the dataset
-query <- function(data, pred) {
+query <- function(data, pred, p) {
   # extract data subset according to specified predicate
-  subset <- data[pred]
+  subset <- data[as.logical(pred)]
   # calculate desired sum
   sum <- sum(subset)
   sum
@@ -288,7 +307,7 @@ query.subsampling <- function(data, pred, t) {
   # extract data subset from subsample according to specified predicate
   T.data <- data[T.rows]
   # get actual query on this subsample
-  sum <- query(T.data, pred[T.rows])
+  sum <- query(data[T.rows], pred[T.rows])
   # scale up
   sum.sub <- sum * length(data) / t
   sum.sub
@@ -363,7 +382,7 @@ reconstruction <- function (query.function, defense.name) {
       # regression coefficient estimates
       attack.estimates <- attack.output$coef
       # estimates rounded to give reconstruction predictions
-      attack.reconstructed <- round(attack.estimates)
+      attack.reconstructed <- as.numeric(attack.estimates > 0.5) #round(attack.estimates)
       # calculate fraction successfully reconstructed
       experiments.frac[exp.index] <-
         sum(attack.reconstructed == sensitive.data) / n
@@ -378,11 +397,9 @@ reconstruction <- function (query.function, defense.name) {
   ##### Visualization of results
   # type to distinguish between successful (1) or not (0)
   results$success <- as.numeric(results$frac > 0.5)
-  print(paste("Min:", min(results[results$success == 0,]$param)))
-  print(paste("Max:", max(results[results$success == 0,]$param)))
   # plot the result
   ggplot(results, aes(x=rmse, y=frac)) + # scatter plot
-    geom_point(aes(color=param, shape=as.factor(success + 23))) + 
+    geom_point(aes(color=param)) + 
     # trend line
     geom_line(aes(color=param), alpha=0.3) +
     # success threshold
@@ -393,7 +410,6 @@ reconstruction <- function (query.function, defense.name) {
     ggtitle(paste("Reconstruction Attack against", defense.name)) + 
     # legend formatting
     scale_color_continuous(name="Parameter\nValue", low="#56B1F7", high="#132B43") +
-    scale_shape_discrete(name="Outcome", labels=c("Failure", "Success")) +
     theme_bw()
   #plot(results$frac, results$rmse) # use this instead if no ggplot
 }
@@ -411,6 +427,205 @@ dev.copy2pdf(file="./figs/attacksubsampling.pdf")
 \pagebreak
 
 \textbf{Code for Problem 3}
+
+\begin{lstlisting}[language=R]
+##
+## q3membershipattack.r
+##
+## Membership attack
+##
+## JH 2019/02/23
+##
+
+library(ggplot2)    # using ggplot graphing libraries (optional)
+
+##### Parameters
+
+set.seed(99)              # RNG seed
+n <- 100                  # Dataset size
+k.trials <- 300      # max number of additional attributes/predicates (m)
+n.samples <- 20
+n.sims <- 100
+delta <- 1 / (10 * n)
+# boundary parameters for reconstruction failure
+# obtained from reconstruction attack in q2 (see other script)
+param.rounding <- 13
+param.noisy <- 14
+param.subsampling <- 13
+
+##### Data
+
+# read in the data
+sample.data <- read.csv('FultonPUMS5sample100.csv')
+sample.data.clean <- sample.data[3:17]
+attributes.n <- length(names(sample.data.clean))
+
+sample.data.binary <- sample.data.clean[c(1, 5:15)]
+binary.names <- names(sample.data.binary)
+
+##### Querying Mechanisms (including defenses)
+
+# standard query of the dataset
+query <- function(data, p) {
+  # calculate the desired sum
+  sum(data) / length(data)
+}
+
+# query w/ defense by rounding to nearest multiple of R
+query.rounding <- function(data, r) {
+  # apply rounding defense
+  sum.rounded <- round(sum(data) / r) * r
+  sum.rounded / length(data)
+}
+
+# query w/ defense by adding Gaussian noise
+query.noisy <- function(data, sigma) {
+  # apply Gaussian noise as defense
+  sum.noisy <- sum(data) + rnorm(1, 0, sigma)
+  sum.noisy / length(data)
+}
+
+# query w/ defense by subsampling t out of n rows
+query.subsampling <- function(data, t) {
+  # create subsample T with t out of n rows
+  T.rows <- sample(length(data), t)
+  # extract data subset from subsample according to specified predicate
+  T.data <- data[T.rows]
+  # get actual query on this subsample
+  sum <- sum(T.data)
+  # scale up
+  sum.sub <- sum * length(data) / t
+  sum.sub / length(data)
+}
+
+
+##### Predicates
+
+# hashing to generate predicates
+prime <- 563    # moderately large prime
+
+predicate.single <- function(individual, r.nums) {
+  (sum(r.nums * individual) %% prime) %% 2
+}
+
+# define predicates for the queries
+predicates <- matrix(NA, nrow = k.trials, ncol = n)
+
+
+# helper function to create data from population
+rmvbernoulli <- function(n=1, prob){
+  history <- matrix(NA, nrow=n, ncol=length(prob))
+  for(i in 1:n){
+    x<- rbinom(n=length(prob), size=1, prob=prob)
+    x[x==0] <- -1
+    history[i,] <- x
+  }
+  history
+}
+
+# test statistic (Dwork et al.)
+test.dwork <- function(alice, sample.mean, population.mean){
+  sum(alice * sample.mean) - sum(population.mean * sample.mean)
+}
+
+# Generate the critical value
+generate.critical <- function(null.sims=1000, alpha, fun, population.prob){
+  population.mean <- 2 * (population.prob - 0.5)
+  hold <- rep(NA,null.sims)
+  for(i in 1:null.sims){
+    sample <- rmvbernoulli(n=n.samples, prob=population.prob)
+    null.alice <- rmvbernoulli(n=1, prob=population.prob)
+    sample.mean <- apply(sample, MARGIN=2, FUN=mean)
+    hold[i] <- eval(fun(alice=null.alice, sample.mean=sample.mean, population.mean=population.mean))
+  }
+  null.distribution <- sort(hold, decreasing=TRUE)
+  null.distribution[round(alpha * null.sims)]
+}
+
+
+population.data <- read.csv('FultonPUMS5full.csv')
+population.probs <- as.vector(apply(population.data[binary.names], 2, mean))
+population.means <- 2 * (population.probs - 0.5)
+
+# run simulation against provided query defense mechanism
+simulate <- function (query.function, query.param) {  
+  predicates <- t(sample.data.binary)
+  
+  population.probs.all <- population.probs
+  population.means.all <- population.means
+  
+  results <- matrix(NA, nrow = k.trials, ncol = 2)
+  
+  # loop through number of predicates/attributes
+  for (pred.index in 1:k.trials) {
+    # generate random numbers for this hash
+    r.nums <- sample(0:(prime - 1), attributes.n, replace=TRUE)
+    # calculate for particular individual
+    pred.temp <- apply(sample.data.clean, MARGIN = 1, predicate.single, r.nums)
+    # store the predicate
+    predicates <- rbind(predicates, pred.temp)
+    population.probs.all <- c(population.probs.all, 0.5)
+    population.means.all <- c(population.means.all, 0)
+    
+    # critical value of the null distribution
+    null.critical <- generate.critical(alpha=delta, fun=test.dwork, population.prob=population.probs.all)
+    
+    history <- vector("numeric", n.sims)
+    for(i in 1:n.sims) {
+      # Simulate data
+      sample <- rmvbernoulli(n=n.samples, prob=population.probs.all)
+      sample.mean <- apply(sample, MARGIN=2, FUN=query.function, query.param)
+      alice <- sample[1,]
+  
+      # Conduct hypothesis test
+      history[i] <- test.dwork(alice=alice, sample.mean=sample.mean, population.mean=population.means.all)
+    }
+    
+    # fraction identified IN
+    accept.frac <- round(100 * mean(history > null.critical)) / 100
+    
+    # storing results
+    results[pred.index, 1] <- nrow(predicates)
+    results[pred.index, 2] <- accept.frac
+    
+    # helps visualize while generating more attributes
+    plot(results[, 1], results[, 2], type='l')
+  }
+  results
+}
+
+
+
+final.graph <- function(results, defense) {
+  # final visualization with ggplot
+  ggplot(data.frame(results), aes(x=X1, y=X2)) +
+    geom_point(size=0.75) +
+    geom_line(alpha=0.5) +
+    xlab("Number of queries/attributes") +
+    ylab("Fraction of successful membership determination") + 
+    ggtitle(paste("Membership Attack Against", defense)) +
+    theme_bw()
+}
+
+
+
+# make simulations and visualizations
+simulate.standard <- simulate(query, 0)
+final.graph(simulate.standard, "Standard Query w/ No Defense")
+dev.copy2pdf(file="./figs/membership.pdf")
+
+simulate.rounding <- simulate(query.rounding, param.rounding)
+final.graph(simulate.rounding, "Rounding Defense")
+dev.copy2pdf(file="./figs/membershiprounding.pdf")
+
+simulate.noisy <- simulate(query.noisy, param.noisy)
+final.graph(simulate.noisy, "Noise Defense")
+dev.copy2pdf(file="./figs/membershipnoisy.pdf")
+
+simulate.subsampling <- simulate(query.subsampling, param.subsampling)
+final.graph(simulate.subsampling, "Subsampling Defense")
+dev.copy2pdf(file="./figs/membershipsubsampling.pdf")
+\end{lstlisting}
 
 
 \end{document}
